--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Gimme Style demo page</title>
     <meta name="description" content="Description and demo for Gimme Style bookmarklet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
